# tafilapi

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  test_main.http
.forgejo/workflows/: ci.yml
.github/workflows/: docker-publish.yml
app/: main.py
app/api/: dependencies.py
app/api/routes/: clean.py  extraction.py  health.py
app/core/: config.py  security.py
app/schemas/: clean.py  extraction.py
app/services/: cleaner.py  downloaders.py  exceptions.py  extractor.py
tests/: conftest.py
tests/api/routes/: test_clean.py  test_extraction.py  test_extraction_routes_parameters.py  test_health.py
tests/core/: test_config.py  test_security.py
tests/services/: test_cleaner.py  test_extractor.py  test_extractor_parameters.py
