[project]
name = "tafilapi"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "trafilatura>=2.1.0",
    "pydantic-settings>=2.14.2",
    "cloakbrowser>=0.4.3",
    "camoufox[geoip]>=0.4.11",
    "beautifulsoup4>=4.15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "httpx>=0.28.1",
    "ruff>=0.15.19",
]

[tool.pytest.ini_options]
pythonpath = ["."]
